adjust background iamge

--- a/index.html
+++ b/index.html
@@ -14,6 +14,68 @@
     />
   </head>
   <body>
-    hi this is ali raza
+    <div class="navbar-banner-container" style="padding-top: 20px">
+      <!-- Navbar -->
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+          <a
+            class="navbar-brand text-white fw-bold rodriguez__group"
+            href="/index.html"
+          >
+            <img
+              class="rodriguez__group"
+              src="./images/home/logo.png"
+              alt="logo"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      <!-- Banner Section -->
+      <section class="banner">
+        <div class="container">
+          <div class="banner-content">
+            <div class="banner-text">
+              <h1>Custom Website Design & Development Agency</h1>
+              <p>
+                Since 1993, we partner with our clients to design, build and
+                manage websites that generate higher sales and increase customer
+                satisfaction.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
