--- a/index.html
+++ b/index.html
@@ -13,69 +13,374 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
-    <div class="navbar-banner-container" style="padding-top: 20px">
-      <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container">
-          <a
-            class="navbar-brand text-white fw-bold rodriguez__group"
-            href="/index.html"
-          >
-            <img
-              class="rodriguez__group"
-              src="./images/home/logo.png"
-              alt="logo"
-            />
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
 
-      <!-- Banner Section -->
-      <section class="banner">
-        <div class="container">
-          <div class="banner-content">
-            <div class="banner-text">
-              <h1>Custom Website Design & Development Agency</h1>
-              <p>
-                Since 1993, we partner with our clients to design, build and
-                manage websites that generate higher sales and increase customer
-                satisfaction.
-              </p>
+  <body>
+    <div>
+      <div class="navbar-banner-container" style="padding-top: 20px">
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark">
+          <div class="container">
+            <a
+              class="navbar-brand text-white fw-bold rodriguez__group"
+              href="/index.html"
+            >
+              <img
+                class="rodriguez__group"
+                src="./images/home/logo.png"
+                alt="logo"
+              />
+            </a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Services</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+
+        <!-- Banner Section -->
+        <section class="banner">
+          <div class="container">
+            <div class="banner-content">
+              <div class="banner-text">
+                <h1>Custom Website Design & Development Agency</h1>
+
+                <p>
+                  Since 1993, we partner with our clients to design, build and
+                  manage websites that generate higher sales and increase
+                  customer satisfaction.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+      <!-- Design and branding -->
+
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6 col-md-4 mt-4">
+            <div class="thumbnail">
+              <div class="caption">
+                <h5 style="color: #0066d6">Design & Branding</h5>
+
+                <div>
+                  <p style="font-size: 12px; letter-spacing: 1px">
+                    <div>
+                     <div style="display: flex;gap: 4px;">
+                   <div>
+                    <img
+                    class="rodriguez__group"
+                    src="./images/home/homepage-icon01.png"
+                    alt="logo"
+                  />
+                   </div>
+                   <p style="font-size: 14px;">
+                    At Altair we build your logo, brand identity, and design
+                    on concepts
+                   </p>
+                     </div> 
+                     <p style="font-size: 14px; margin-top: -12px;">
+                      as unique as your business. Whether you want
+                      an adjustment, or a whole new face, we have the tools and
+                      skills to create and develop your brand strategy.
+                     </p>
+                    </div>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 mt-4">
+            <div class="thumbnail">
+              <div class="caption">
+                <h5 style="color: #0066d6">Design & Branding</h5>
+
+                <div>
+                  <p style="font-size: 12px; letter-spacing: 1px">
+                    <div>
+                     <div style="display: flex;gap: 4px;">
+                   <div>
+                    <img
+                    class="rodriguez__group"
+                    src="./images/home/homepage-icon01.png"
+                    alt="logo"
+                  />
+                   </div>
+                   <p style="font-size: 14px;">
+                    At Altair we build your logo, brand identity, and design
+                    on concepts
+                   </p>
+                     </div> 
+                     <p style="font-size: 14px; margin-top: -12px;">
+                      as unique as your business. Whether you want
+                      an adjustment, or a whole new face, we have the tools and
+                      skills to create and develop your brand strategy.
+                     </p>
+                    </div>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 mt-4">
+            <div class="thumbnail">
+              <div class="caption">
+                <h5 style="color: #0066d6">Design & Branding</h5>
+
+                <div>
+                  <p style="font-size: 12px; letter-spacing: 1px">
+                    <div>
+                     <div style="display: flex;gap: 4px;">
+                   <div>
+                    <img
+                    class="rodriguez__group"
+                    src="./images/home/homepage-icon01.png"
+                    alt="logo"
+                  />
+                   </div>
+                   <p style="font-size: 14px;">
+                    At Altair we build your logo, brand identity, and design
+                    on concepts
+                   </p>
+                     </div> 
+                     <p style="font-size: 14px; margin-top: -12px;">
+                      as unique as your business. Whether you want
+                      an adjustment, or a whole new face, we have the tools and
+                      skills to create and develop your brand strategy.
+                     </p>
+                    </div>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 mt-4">
+            <div class="thumbnail">
+              <div class="caption">
+                <h5 style="color: #0066d6">Design & Branding</h5>
+
+                <div>
+                  <p style="font-size: 12px; letter-spacing: 1px">
+                    <div>
+                     <div style="display: flex;gap: 4px;">
+                   <div>
+                    <img
+                    class="rodriguez__group"
+                    src="./images/home/homepage-icon01.png"
+                    alt="logo"
+                  />
+                   </div>
+                   <p style="font-size: 14px;">
+                    At Altair we build your logo, brand identity, and design
+                    on concepts
+                   </p>
+                     </div> 
+                     <p style="font-size: 14px; margin-top: -12px;">
+                      as unique as your business. Whether you want
+                      an adjustment, or a whole new face, we have the tools and
+                      skills to create and develop your brand strategy.
+                     </p>
+                    </div>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 mt-4">
+            <div class="thumbnail">
+              <div class="caption">
+                <h5 style="color: #0066d6">Design & Branding</h5>
+
+                <div>
+                  <p style="font-size: 12px; letter-spacing: 1px">
+                    <div>
+                     <div style="display: flex;gap: 4px;">
+                   <div>
+                    <img
+                    class="rodriguez__group"
+                    src="./images/home/homepage-icon01.png"
+                    alt="logo"
+                  />
+                   </div>
+                   <p style="font-size: 14px;">
+                    At Altair we build your logo, brand identity, and design
+                    on concepts
+                   </p>
+                     </div> 
+                     <p style="font-size: 14px; margin-top: -12px;">
+                      as unique as your business. Whether you want
+                      an adjustment, or a whole new face, we have the tools and
+                      skills to create and develop your brand strategy.
+                     </p>
+                    </div>
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </section>
+      </div>
+      <!-- footer start  -->
+
+      <footer class="footer">
+        <section
+          class="py-10 py-md-5 py-xl-8 border-top border-light footer__css"
+        >
+          <div class="container overflow-hidden">
+            <div class="row gy-4 gy-lg-0 justify-content-xl-between">
+              <div class="col-12 col-md-4 col-lg-3 col-xl-2">
+                <div class="widget">
+                  <h4
+                    class="widget-title mb-4"
+                    style="color: gray; font-size: 20px"
+                  >
+                    Essentials
+                  </h4>
+                  <p style="margin-bottom: -2px">
+                    <a
+                      class="link-secondary text-decoration-none"
+                      style="font-size: 12px"
+                      href="tel:+15057922430"
+                      >Why Altair?</a
+                    >
+                  </p>
+                  <p style="margin-bottom: -2px">
+                    <a
+                      class="link-secondary text-decoration-none"
+                      style="font-size: 13px"
+                      href="tel:+15057922430"
+                      >Why Altair?</a
+                    >
+                  </p>
+                  <p style="margin-bottom: -2px">
+                    <a
+                      class="link-secondary text-decoration-none"
+                      style="font-size: 13px"
+                      href="tel:+15057922430"
+                      >Why Altair?</a
+                    >
+                  </p>
+                </div>
+              </div>
+              <div class="col-12 col-md-4 col-lg-3 col-xl-2">
+                <div class="widget">
+                  <h4
+                    class="widget-title mb-4"
+                    style="color: gray; font-size: 20px"
+                  >
+                    Services
+                  </h4>
+                  <p style="margin-bottom: -2px">
+                    <a
+                      class="link-secondary text-decoration-none"
+                      style="font-size: 13px"
+                      href="tel:+15057922430"
+                      >Why Altair?</a
+                    >
+                  </p>
+                  <p style="margin-bottom: -2px">
+                    <a
+                      class="link-secondary text-decoration-none"
+                      style="font-size: 13px"
+                      href="tel:+15057922430"
+                      >Why Altair?</a
+                    >
+                  </p>
+                  <p style="margin-bottom: -2px">
+                    <a
+                      class="link-secondary text-decoration-none"
+                      style="font-size: 13px"
+                      href="tel:+15057922430"
+                      >Why Altair?</a
+                    >
+                  </p>
+                </div>
+              </div>
+              <div class="col-12 col-md-4 col-lg-3 col-xl-2">
+                <div class="widget">
+                  <h4
+                    class="widget-title mb-4"
+                    style="color: gray; font-size: 20px"
+                  >
+                    Products
+                  </h4>
+                  <p style="margin-bottom: -2px">
+                    <a
+                      class="link-secondary text-decoration-none"
+                      style="font-size: 13px"
+                      href="tel:+15057922430"
+                      >Why Altair?</a
+                    >
+                  </p>
+                  <p style="margin-bottom: -2px">
+                    <a
+                      class="link-secondary text-decoration-none"
+                      style="font-size: 13px"
+                      href="tel:+15057922430"
+                      >Why Altair?</a
+                    >
+                  </p>
+                  <p style="margin-bottom: -2px">
+                    <a
+                      class="link-secondary text-decoration-none"
+                      style="font-size: 13px"
+                      href="tel:+15057922430"
+                      >Why Altair?</a
+                    >
+                  </p>
+                </div>
+              </div>
+              <div class="col-12 col-md-4 col-lg-12 col-xl-6">
+                <div class="widget">
+                  <p style="color: white; font-size: 13px">
+                    "I highly recommend Altair Technnology for any website
+                    design or software development. They will live up to any
+                    task, and more importantly, work for their clients with a
+                    level of respect, hard work and integrity that is very hard
+                    to find."
+                  </p>
+                </div>
+              </div>
+            </div>
+            <p
+              class="col-12 col-md-4 col-lg-3 col-xl-6 mt-4"
+              style="font-size: 12px; color: white"
+            >
+              Copyright © 1993-2024 Altair Technology, Inc. All Rights Reserved.
+              Contact Us Designed, Developed, and Hosted by Altair Technology
+              Altair Technology, Inc Powered by the Altair Commerce Engine
+            </p>
+          </div>
+        </section>
+      </footer>
     </div>
   </body>
 </html>
