--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#">Contact</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -70,12 +73,11 @@
           <div class="container">
             <div class="banner-content">
               <div class="banner-text">
-                <h1>Custom Website Design & Development Agency</h1>
+                <h1>Digital Creative
+                </h1>
 
                 <p>
-                  Since 1993, we partner with our clients to design, build and
-                  manage websites that generate higher sales and increase
-                  customer satisfaction.
+                  Creatively transforming business objectives online to turn heads and get results. Moving the message forward in collaterals, signage, and promotional materials.
                 </p>
               </div>
             </div>
