--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                    </div>
                    <p style="font-size: 14px;">
                     At Altair we build your logo, brand identity, and design
-                    on concepts
+                    on concepts 
                    </p>
                      </div> 
                      <p style="font-size: 14px; margin-top: -12px;">
@@ -366,7 +366,7 @@
                     "I highly recommend Altair Technnology for any website
                     design or software development. They will live up to any
                     task, and more importantly, work for their clients with a
-                    level of respect, hard work and integrity that is very hard
+                    level of respect, hard work and integrity that is very hardflkljnlnln
                     to find."
                   </p>
                 </div>
