Change css navbar

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                       At Altair we build your logo, brand identity, and design on concepts as
                     </p>
                   </div>
-                  <p style="font-size: 14px; margin-top: -12px;">
+                  <p style="font-size: 14px; margin-top: -12px; font-weight: 400; line-height: 24px; font-family: Arial;">
                     unique as your business. Whether you want an adjustment, or a whole new face, we have the tools and
                     skills to create and develop your brand strategy.
                   </p>
@@ -105,7 +105,7 @@
                 <div>
                   <div style="display: flex;gap: 4px;">
                     <div>
-                      <img class="rodriguez__group" src="./images/home/hhomepage-icon02.png" alt="logo" />
+                      <img class="rodriguez__group" src="images/home/homepage-icon02.png" alt="logo" />
                     </div>
                     <p style="font-size: 14px; font-weight: 400; line-height: 24px; font-family: Arial;">
                       Altair has substantial expertise building, deploying and supporting health
