--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
             <div class="caption">
               <h5 style="color: #0066d6; font-family: 'Open Sans', sans-serif; line-height: 24px;
                 margin-bottom: 5px">Design & Branding</h5>
+
               <div>
+                <p style="font-size: 12px; letter-spacing: 1px;">
                 <div>
                   <div style="display: flex;gap: 4px;">
                     <div>
@@ -85,7 +87,8 @@
                       At Altair we build your logo, brand identity, and design on concepts as
                     </p>
                   </div>
-                  <p style="font-size: 14px; margin-top: -12px; font-weight: 400; line-height: 24px; font-family: Arial;">
+                  <p
+                    style="font-size: 14px; margin-top: -12px; font-weight: 400; line-height: 24px; font-family: Arial;">
                     unique as your business. Whether you want an adjustment, or a whole new face, we have the tools and
                     skills to create and develop your brand strategy.
                   </p>
@@ -133,17 +136,17 @@
                 <div>
                   <div style="display: flex;gap: 4px;">
                     <div>
-                      <img class="rodriguez__group" src="./images/home/homepage-icon01.png" alt="logo" />
+                      <img class="rodriguez__group" src="./images/home/homepage-icon04.png" alt="logo" />
                     </div>
                     <p style="font-size: 14px;">
-                      At Altair we build your logo, brand identity, and design
-                      on concepts
+                      Mobile devices have passed up the desktop as means of interacting with the
                     </p>
                   </div>
-                  <p style="font-size: 14px; margin-top: -12px;">
-                    as unique as your business. Whether you want
-                    an adjustment, or a whole new face, we have the tools and
-                    skills to create and develop your brand strategy.
+                  <p
+                    style="font-size: 14px; margin-top: -12px; font-weight: 400; line-height: 24px; font-family: Arial;">
+                    internet for many products and services. Is your business mobile ready? Whether you are looking for
+                    a mobile website or mobile app we can make sure your business is on the leading edge of this
+                    technology trend.
                   </p>
                 </div>
                 </p>
