Change css navbar

--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
                     applications. With over 300 health industry clients our experience includes interfaces to over 100
                     Electronic Health Record systems, over 500 medical device interfaces and the design, develop and
                     deploy of 100s of medical software projects.
+                    <br>
+                    <br>
+                    Altair's experience and expertise in the health industry ensures that your medical IT project will
+                    fully comply with CLIA, HIPAA, PHI and other regulatory requirements.
                   </p>
                 </div>
                 </p>
@@ -154,7 +158,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 mt-4">
+        <div class="col-sm-6 col-md-4">
           <div class="thumbnail">
             <div class="caption">
               <h5 style="color: #0066d6">Website Design & Development</h5>
@@ -164,17 +168,15 @@
                 <div>
                   <div style="display: flex;gap: 4px;">
                     <div>
-                      <img class="rodriguez__group" src="./images/home/homepage-icon01.png" alt="logo" />
+                      <img class="rodriguez__group" src="./images/home/homepage-icon02.png" alt="logo" />
                     </div>
                     <p style="font-size: 14px;">
-                      At Altair we build your logo, brand identity, and design
-                      on concepts
+                      Custom website design & development with your ‘look’ and the functionality you
                     </p>
                   </div>
                   <p style="font-size: 14px; margin-top: -12px;">
-                    as unique as your business. Whether you want
-                    an adjustment, or a whole new face, we have the tools and
-                    skills to create and develop your brand strategy.
+                    seek. Whether this is your first website, or time for a redesign, we create options based on your
+                    requirements to execute on time and on budget.
                   </p>
                 </div>
                 </p>
@@ -186,27 +188,6 @@
           <div class="thumbnail">
             <div class="caption">
               <h5 style="color: #0066d6"></h5>
-
-              <div>
-                <p style="font-size: 12px; letter-spacing: 1px">
-                <div>
-                  <div style="display: flex;gap: 4px;">
-                    <div>
-                      <!-- <img class="rodriguez__group" src="./images/home/homepage-icon01.png" alt="logo" /> -->
-                    </div>
-                    <p style="font-size: 14px;">
-                      At Altair we build your logo, brand identity, and design
-                      on concepts
-                    </p>
-                  </div>
-                  <p style="font-size: 14px; margin-top: -12px;">
-                    as unique as your business. Whether you want
-                    an adjustment, or a whole new face, we have the tools and
-                    skills to create and develop your brand strategy.
-                  </p>
-                </div>
-                </p>
-              </div>
             </div>
           </div>
         </div>
@@ -228,12 +209,28 @@
                     Altair?</a>
                 </p>
                 <p style="margin-bottom: -2px">
-                  <a class="link-secondary text-decoration-none" style="font-size: 13px" href="tel:+15057922430">Why
-                    Altair?</a>
+                  <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                    href="tel:+15057922430">Services</a>
                 </p>
                 <p style="margin-bottom: -2px">
-                  <a class="link-secondary text-decoration-none" style="font-size: 13px" href="tel:+15057922430">Why
-                    Altair?</a>
+                  <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                    href="tel:+15057922430">Portfolio</a>
+                </p>
+                <p style="margin-bottom: -2px">
+                  <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                    href="tel:+15057922430">About</a>
+                </p>
+                <p style="margin-bottom: -2px">
+                  <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                    href="tel:+15057922430">Contact</a>
+                </p>
+                <p style="margin-bottom: -2px">
+                  <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                    href="tel:+15057922430">Careers</a>
+                </p>
+                <p style="margin-bottom: -2px">
+                  <a class="link-secondary text-decoration-none" style="font-size: 13px" href="tel:+15057922430">Privacy
+                    Policy</a>
                 </p>
               </div>
             </div>
@@ -243,16 +240,28 @@
                   Services
                 </h4>
                 <p style="margin-bottom: -2px">
-                  <a class="link-secondary text-decoration-none" style="font-size: 13px" href="tel:+15057922430">Why
-                    Altair?</a>
+                  <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                    href="tel:+15057922430">Websites</a>
                 </p>
                 <p style="margin-bottom: -2px">
-                  <a class="link-secondary text-decoration-none" style="font-size: 13px" href="tel:+15057922430">Why
-                    Altair?</a>
+                  <a class="link-secondary text-decoration-none" style="font-size: 13px" href="tel:+15057922430">Get
+                    More</a>
                 </p>
                 <p style="margin-bottom: -2px">
-                  <a class="link-secondary text-decoration-none" style="font-size: 13px" href="tel:+15057922430">Why
-                    Altair?</a>
+                  <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                    href="tel:+15057922430">Marketing</a>
+                </p>
+                <p style="margin-bottom: -2px">
+                  <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                    href="tel:+15057922430">TechSide</a>
+                </p>
+                <p style="margin-bottom: -2px">
+                  <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                    href="tel:+15057922430">Planning</a>
+                </p>
+                <p style="margin-bottom: -2px">
+                  <a class="link-secondary text-decoration-none" style="font-size: 13px" href="tel:+15057922430">Client
+                    Login</a>
                 </p>
               </div>
             </div>
@@ -262,16 +271,27 @@
                   Products
                 </h4>
                 <p style="margin-bottom: -2px">
-                  <a class="link-secondary text-decoration-none" style="font-size: 13px" href="tel:+15057922430">Why
-                    Altair?</a>
+                  <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                    href="tel:+15057922430">Websites</a>
                 </p>
                 <p style="margin-bottom: -2px">
-                  <a class="link-secondary text-decoration-none" style="font-size: 13px" href="tel:+15057922430">Why
-                    Altair?</a>
+                  <a class="link-secondary text-decoration-none" style="font-size: 13px" href="tel:+15057922430">ACE</a>
                 </p>
                 <p style="margin-bottom: -2px">
-                  <a class="link-secondary text-decoration-none" style="font-size: 13px" href="tel:+15057922430">Why
-                    Altair?</a>
+                  <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                    href="tel:+15057922430">Point of Sale</a>
+                </p>
+                <p style="margin-bottom: -2px">
+                  <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                    href="tel:+15057922430">Member Manager</a>
+                </p>
+                <p style="margin-bottom: -2px">
+                  <a class="link-secondary text-decoration-none" style="font-size: 13px"
+                    href="tel:+15057922430">Online Learning</a>
+                </p>
+                <p style="margin-bottom: -2px">
+                  <a class="link-secondary text-decoration-none" style="font-size: 13px" 
+                  href="tel:+15057922430">Event Calendar</a>
                 </p>
               </div>
             </div>
